--- a/src/components/Authorization/Registration/Registration.scss
+++ b/src/components/Authorization/Registration/Registration.scss
@@ -43,6 +43,9 @@
         line-height: 24px;
         letter-spacing: 0%;
         color: #1b1b1be5;
+        &::placeholder {
+          color: transparent;
+        }
       }
       label {
         position: absolute;
@@ -57,7 +60,8 @@
         letter-spacing: 0%;
         color: #1b1b1b99;
       }
-      input:focus ~ label {
+      input:focus ~ label,
+      input:not(:placeholder-shown) ~ label {
         top: -5px;
       }
       &.has_error {
@@ -86,6 +90,9 @@
         line-height: 24px;
         letter-spacing: 0%;
         color: #1b1b1be5;
+        &::placeholder {
+          color: transparent;
+        }
       }
       label {
         position: absolute;
@@ -100,7 +107,8 @@
         letter-spacing: 0%;
         color: #1b1b1b99;
       }
-      input:focus ~ label {
+      input:focus ~ label,
+      input:not(:placeholder-shown) ~ label {
         top: -5px;
       }
       &.has_error {
@@ -129,6 +137,9 @@
         line-height: 24px;
         letter-spacing: 0%;
         color: #1b1b1be5;
+        &::placeholder {
+          color: transparent;
+        }
       }
       label {
         position: absolute;
@@ -143,8 +154,17 @@
         letter-spacing: 0%;
         color: #1b1b1b99;
       }
-      input:focus ~ label {
+      input:focus ~ label,
+      input:not(:placeholder-shown) ~ label {
         top: -5px;
+      }
+      .icon {
+        position: absolute;
+        top: 0;
+        right: 12px;
+        font-size: 21px;
+        cursor: pointer;
+        color: #1b1b1b99;
       }
       &.has_error {
         border-bottom: 1px solid red;
